fix doc based on 3.11.1